samples/_failures_safe/1761640172_8a324d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1680eeae.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_1680eeae.c:146:9: error: expected declaration or statement at end of input
  146 |         token.value[0] = lexer_advance(lexer);
      |         ^~~~~
./samples/SAFE/__tmp_1680eeae.c:146:9: error: expected declaration or statement at end of input
